--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-custom-package = { version = "0.1.0", registry = "artifactory" }
+my_crate = { version = "0.1.0", registry = "artifactory" }
